[package]
name = "ecma_regex"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bench]]
name = "bench"
harness = false

[dependencies]
libregexp-sys = "0.0.2"
bitflags = "1.3.2"

[dev-dependencies]
regex = "1.7.1"
criterion = "0.4.0"