[package]
name = "ecma_regex"
version = "0.0.2"
edition = "2021"
license = "MIT"
repository = "https://github.com/hyf0/ecma_regex"
keywords = ["quickjs", "regex", "libregexp", "regexp", "js_regex"]
description = "regex in ECMAScript regular expression syntax!"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bench]]
name = "bench"
harness = false

[dependencies]
libregexp-sys = { version = "0.0.4" }
bitflags = "1.3.2"

[dev-dependencies]
rs_regex = { package = "regex", version = "1.7.1" }
regress = "0.4.1"
criterion = "0.4.0"